--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Сайт</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <span class="a"> ШКОЛА ЦВЕТОВОДА</span>
